recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:17: error: ')' expected but integer literal found.
  snowSide(levels-1,length./3)
                            ^